--- a/ExaminationSystem-Docker/Dockerfile
+++ b/ExaminationSystem-Docker/Dockerfile
@@ -1,7 +1,4 @@
 FROM mcr.microsoft.com/mssql/server:2022-latest
 
-COPY ./db-setup /db-setup
-
-RUN chmod +x /db-setup/entrypoint.sh
- 
-CMD /bin/bash /db-setup/entrypoint.sh
+# Copy the setup scripts to the auto-run directory
+COPY ./db-setup /docker-entrypoint-initdb.d
